--- a/rosieBody.html
+++ b/rosieBody.html
@@ -5,8 +5,8 @@
   <title>rosieTheFortuneTeller</title>
 	<meta name="description" content="rosieTheFortuneTeller">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-	<link rel="stylesheet" type="text/css" href="rosieDress.css">
-  <script src="rosieHeart.js"></script>
+	<link rel="stylesheet" type="text/css" href="main.css">
+  <script src="rosieTheFortuneTeller.js"></script>
 </head>
 <body>
 
